补充pop回调的第二种方法

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,6 +6,7 @@
 
 <ion-content padding>
   <button ion-button color="dark" (click)="pushClick()" >push出下个页面 </button>
- <button ion-button color="dark" (click)="presentClick()" >present出下个页面 </button>
- <button ion-button color="dark" (click)="printClick()" >打印回调值 </button>
+  <button ion-button color="dark" (click)="presentClick()" >present出下个页面 </button>
+  <button ion-button color="dark" (click)="push2Click()" >push2页面 </button>
+  <button ion-button color="light" (click)="printClick()" >打印回调值 </button>
 </ion-content>
